--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+certifi==2025.4.26
+charset-normalizer==3.4.2
+idna==3.10
 PyQt6==6.9.0
 PyQt6-Qt6==6.9.1
 PyQt6_sip==13.10.2
+python-dotenv==1.1.0
+requests==2.32.4
+urllib3==2.4.0
